--- a/styles/configuration.css
+++ b/styles/configuration.css
@@ -43,4 +43,23 @@
 	width: 50%;
 	background-color: rgb(243, 227, 255);
 	border-radius: 4px;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+#game-configuration h2 {
+	font-size: 1rem;
+	margin: 0.5 0;
+}
+
+#game-configuration h3 {
+	font-size: 1.5rem;
+	margin: 0.5rem 0;
+	color: rgb(94, 4, 168);
+}
+
+.player-symbol {
+	font-size: 2rem;
+	font-weight: bold;
+	color: rgb(47, 4, 82);
+	margin: 0.5rem 0;
 }
